feat: new user apis
